# cpp-finite-field-table-generator

./: CMakeLists.txt  FiniteFieldArithmetic.sln  README.md
.github/workflows/: build-linux.yaml  build-macos.yaml  build-windows.yaml  run-tests.yaml
FiniteFieldArithmetic/: FiniteFieldArithmetic.vcxproj  FiniteFieldArithmetic.vcxproj.filters  GaloisNumber.h  main.cpp
src/: draw_tables.cpp  draw_tables.h  galois_number.cpp  galois_number.h  main.cpp
tests/: test_galois_number.cpp
